force-app/main/default/objects/MatriceRemiCode__c/MatriceRemiCode__c.object-meta.xml
<CustomObject>
    <label>MatriceRemiCode</label>
    <nameField>
        <displayFormat>Remi-{00000000}</displayFormat>
        <label>Calculate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MatriceRemiCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>