force-app/main/default/objects/MatriceRemiCode__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>