force-app/main/default/objects/MatriceRemiCode__c/fields/RemiCode__c.field-meta.xml
<CustomField>
    <fullName>RemiCode__c</fullName>
    <label>Codice Remi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>