force-app/main/default/objects/MatriceRemiCode__c/fields/SalesCompany__c.field-meta.xml
<CustomField>
    <fullName>SalesCompany__c</fullName>
    <label>Societa Vendita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>