force-app/main/default/objects/MatriceRemiCode__c/fields/VATNumberUdb__c.field-meta.xml
<CustomField>
    <fullName>VATNumberUdb__c</fullName>
    <label>Partita Iva Udb</label>
    <length>25</length>
    <type>Text</type>
</CustomField>